# sfml_tut

./: .clang-format  .clang-tidy  .clang-tidy-fixes  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Makefile  build.sh  main.cc
cmake_modules/: CMakeLists.txt
modules/: CMakeLists.txt
src/: CMakeLists.txt  body.hpp  collision.cpp  collision.hpp  debug.cpp  debug.hpp  event.cpp  event.hpp  fs.hpp  log.cpp  log.hpp  main.cpp  paddle.hpp  schd_event.hpp  template.cpp  template.hpp
